[package]
name = "funkload"
version = "0.1.0"
authors = ["Baptiste Gelez <baptiste@gelez.xyz>"]
edition = "2018"

[dependencies]
cairo-rs = "0.5"
dirs = "1.0"
gdk = "0.9"
gdk-pixbuf = "0.5"
glib = "0.6"
gtk = { version = "0.5", features = [ "v3_22" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9"
workerpool = "1.1.1"
lazy_static = "1.2"