[package]
name = "mobydick"
version = "0.1.0"
authors = ["Elza Gelez <elza@gelez.xyz>"]
license = "LICENSE"
readme = "README.md"
description = "Download music from your Funkwhale instance"
edition = "2018"

[dependencies]
cairo-rs = "0.5"
dirs = "1.0"
gdk = "0.9"
gdk-pixbuf = "0.5"
glib = "0.6"
gtk = { version = "0.5", features = [ "v3_22_29" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9"
workerpool = "1.1.1"
lazy_static = "1.2"
open = "1.2"

[package.metadata.deb]
maintainer = "Elza Gelez <elza@gelez.xyz>"
copyright = "2019, Elza Gelez"
license-file = ["LICENSE", "2"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/mobydick", "usr/bin/", "755"],
    # assets
    ["icons/mobydick.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["mobydick.desktop", "usr/share/applications/", "644"],
]
